--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body >
     <div class="main">   
     <div class="big-wrapper light">
-        <img src="img/shape.png" alt="" class="shape">
+        <img src="shape.png" alt="" class="shape">
     <header> 
         <nav class="container"> 
                 <div class="logo">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="logo.png" alt="logo">
                     <h3>Blatt</h3>
                 </div>
 
@@ -64,7 +64,7 @@
                 </div>
 
             <div class="right">
-                <img src="img/person.png" alt="person" class="person">
+                <img src="person.png" alt="person" class="person">
             </div> 
         </div>
     </main>
